--- a/Fisio+/atendimento/agendamentos.html
+++ b/Fisio+/atendimento/agendamentos.html
@@ -6,6 +6,7 @@
     <title>Agenda | Fisio+</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cssagendamento.css">
+    <link rel="icon" href="../fisiong.png">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
             <div class="nav-group">
                 <span>Atendimento</span>
                 <div class="dropdown">
-                    <a href="agenda.html">Agenda</a>
+                    <a href="agendamentos.html" class="active">Agenda</a>
                     <a href="checkin.html">Check-in</a>
                     <a href="avaliaçoes.html">Avaliações</a>
                     <a href="prontuarios.html">Prontuários</a>
@@ -40,18 +41,26 @@
             <div class="nav-group">
                 <span>Financeiro</span>
                 <div class="dropdown">
-                    <a href="mensalidades.html">Mensalidades</a>
-                    <a href="financeiro.html">Financeiro</a>
-                    <a href="relatorios.html">Relatórios</a>
+                    <a href="../financeiro/mensalidades.html">Mensalidades</a>
+                    <a href="../financeiro/financeiro.html">Financeiro</a>
+                    <a href="../financeiro/relatorios.html">Relatórios</a>
                 </div>
             </div>
 
         </nav>
 
         <div class="top-actions">
-            <span>☰</span>
+            <div class="menu-container">
+                <input type="checkbox" id="menu-toggle" class="menu-checkbox">
+                <label for="menu-toggle" class="menu-btn">☰</label>
+                <div class="menu-dropdown">
+                    <a href="../configuracoes.html">Configurações</a>
+                    <a href="../index.html">Sair</a>
+                </div>
+            </div>
+
             <div class="avatar">
-                <img src="../logofisio.png" alt="Logo Fisio+">
+                <img src="../logofisio.png" alt="Fisio+">
             </div>
         </div>
 
