--- a/Fisio+/atendimento/checkin.html
+++ b/Fisio+/atendimento/checkin.html
@@ -6,7 +6,7 @@
     <title>Check-in | Fisio+</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="csscheckin.css">
-    <link rel="icon" href="logofisio.png">
+    <link rel="icon" href="../fisiong.png">
 
 </head>
 
@@ -17,7 +17,7 @@
         <div class="brand">Fisio+</div>
 
         <nav class="nav">
-            <a href="dashboard.html">Menu</a>
+            <a href="../dashboard.html">Menu</a>
 
             <div class="nav-group">
                 <span>Atendimento</span>
@@ -40,15 +40,23 @@
             <div class="nav-group">
                 <span>Financeiro</span>
                 <div class="dropdown">
-                    <a href="mensalidades.html">Mensalidades</a>
-                    <a href="financeiro.html">Financeiro</a>
-                    <a href="relatorios.html">Relatórios</a>
+                    <a href="../financeiro/mensalidades.html">Mensalidades</a>
+                    <a href="../financeiro/financeiro.html">Financeiro</a>
+                    <a href="../financeiro/relatorios.html">Relatórios</a>
                 </div>
             </div>
         </nav>
 
         <div class="top-actions">
-            <span>☰</span>
+            <div class="menu-container">
+                <input type="checkbox" id="menu-toggle" class="menu-checkbox">
+                <label for="menu-toggle" class="menu-btn">☰</label>
+                <div class="menu-dropdown">
+                    <a href="../configuracoes.html">Configurações</a>
+                    <a href="../index.html">Sair</a>
+                </div>
+            </div>
+
             <div class="avatar">
                 <img src="../logofisio.png" alt="Fisio+">
             </div>
