--- a/Fisio+/dashboard.html
+++ b/Fisio+/dashboard.html
@@ -39,18 +39,26 @@
             <div class="nav-group">
                 <span>Financeiro</span>
                 <div class="dropdown">
-                    <a href="mensalidades.html">Mensalidades</a>
-                    <a href="financeiro.html">Financeiro</a>
-                    <a href="relatorios.html">Relatórios</a>
+                    <a href="financeiro/mensalidades.html">Mensalidades</a>
+                    <a href="financeiro/financeiro.html">Financeiro</a>
+                    <a href="financeiro/relatorios.html">Relatórios</a>
                 </div>
             </div>
 
         </nav>
 
         <div class="top-actions">
-            <span>☰</span>
+            <div class="menu-container">
+                <input type="checkbox" id="menu-toggle" class="menu-checkbox">
+                <label for="menu-toggle" class="menu-btn">☰</label>
+                <div class="menu-dropdown">
+                    <a href="configuracoes.html">Configurações</a>
+                    <a href="index.html">Sair</a>
+                </div>
+            </div>
+
             <div class="avatar">
-                <img src="logofisio.png" alt="Logo Fisio+">
+                <img src="logofisio.png" alt="Fisio+">
             </div>
         </div>
 
@@ -84,7 +92,7 @@
             </div>
 
             <div class="today-actions">
-                <a href="agendamentos.html" class="primary">Abrir agenda</a>
+                <a href="atendimento/agendamentos.html" class="primary">Abrir agenda</a>
 
         </section>
 
