--- a/Fisio+/financeiro/financeiro.html
+++ b/Fisio+/financeiro/financeiro.html
@@ -3,15 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Clientes | Fisio+</title>
+    <title>Financeiro | Fisio+</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../fisiong.png">
-    <link rel="stylesheet" href="clientes.css">
+    <link rel="stylesheet" href="financeiro.css">
 </head>
 
 <body>
 
-    <!-- ================= TOPBAR ================= -->
     <header class="topbar">
         <div class="brand">Fisio+</div>
 
@@ -31,17 +30,17 @@
             <div class="nav-group">
                 <span>Cadastros</span>
                 <div class="dropdown">
-                    <a href="clientes.html" class="active">Clientes</a>
-                    <a href="profissionais.html">Profissionais</a>
+                    <a href="../cadastro/clientes.html">Clientes</a>
+                    <a href="../cadastro/profissionais.html">Profissionais</a>
                 </div>
             </div>
 
             <div class="nav-group">
                 <span>Financeiro</span>
                 <div class="dropdown">
-                    <a href="../financeiro/mensalidades.html">Mensalidades</a>
-                    <a href="../financeiro/financeiro.html">Financeiro</a>
-                    <a href="../financeiro/relatorios.html">Relatórios</a>
+                    <a href="mensalidades.html">Mensalidades</a>
+                    <a href="financeiro.html" class="active">Financeiro</a>
+                    <a href="relatorios.html">Relatórios</a>
                 </div>
             </div>
         </nav>
@@ -62,32 +61,29 @@
         </div>
     </header>
 
-    <!-- ================= CONTAINER ================= -->
     <main class="container">
 
-        <!-- FILTRO + ADICIONAR CLIENTE -->
         <section class="filter-actions">
             <div class="filter">
-                <label for="filtro-status">Filtrar por status:</label>
-                <select id="filtro-status">
+                <label for="filtro-tipo">Filtrar por tipo:</label>
+                <select id="filtro-tipo">
                     <option value="todos">Todos</option>
-                    <option value="ativo">Ativo</option>
-                    <option value="inativo">Inativo</option>
+                    <option value="receita">Receita</option>
+                    <option value="despesa">Despesa</option>
                 </select>
             </div>
 
-            <a href="#modal-add" class="add-btn"><i class="fas fa-plus"></i> Adicionar Cliente</a>
+            <a href="#modal-add" class="add-btn"><i class="fas fa-plus"></i> Nova Transação</a>
         </section>
 
-        <!-- LISTA DE CLIENTES -->
-        <section class="clientes-list">
+        <section class="financeiro-list">
 
-            <div class="cliente-card">
-                <div class="cliente-info">
-                    <strong>Cristiano Ronaldo dos Santos Aveiro</strong>
-                    <p>Telefone: (11) 98877-2233</p>
-                    <p>CPF: 123.456.789-01</p>
-                    <p>Status: <span class="status ativo">Ativo</span></p>
+            <div class="financeiro-card">
+                <div class="financeiro-info">
+                    <strong>Mensalidade Cliente: Cristiano Ronaldo</strong>
+                    <p>Data: 25/01/2026</p>
+                    <p>Valor: R$ 250,00</p>
+                    <p>Tipo: <span class="status receita">Receita</span></p>
                 </div>
 
                 <div class="edit-container">
@@ -99,12 +95,12 @@
                 </div>
             </div>
 
-            <div class="cliente-card">
-                <div class="cliente-info">
-                    <strong>Esmeraldino Suárez</strong>
-                    <p>Telefone: (11) 97755-8899</p>
-                    <p>CPF: 987.654.321-00</p>
-                    <p>Status: <span class="status inativo">Inativo</span></p>
+            <div class="financeiro-card">
+                <div class="financeiro-info">
+                    <strong>Compra de Materiais</strong>
+                    <p>Data: 22/01/2026</p>
+                    <p>Valor: R$ 120,00</p>
+                    <p>Tipo: <span class="status despesa">Despesa</span></p>
                 </div>
 
                 <div class="edit-container">
@@ -120,21 +116,24 @@
 
     </main>
 
-    <!-- ================= MODAL ADICIONAR CLIENTE ================= -->
     <div id="modal-add" class="modal">
         <div class="modal-box">
-            <h2>Adicionar Cliente</h2>
+            <h2>Nova Transação</h2>
             <form>
-                <label for="nome">Nome</label>
-                <input type="text" id="nome" placeholder="Nome completo">
+                <label for="descricao">Descrição</label>
+                <input type="text" id="descricao" placeholder="Descrição da transação">
 
-                <label for="telefone">Telefone</label>
-                <input type="text" id="telefone" placeholder="(12) 34567-8901">
+                <label for="data">Data</label>
+                <input type="date" id="data">
 
-                <label for="cpf">CPF</label>
-                <input type="text" id="cpf" placeholder="123.456.789-01">
+                <label for="valor">Valor</label>
+                <input type="number" id="valor" placeholder="0.00" step="0.01">
 
-                <!-- Status removido, cliente sempre ativo -->
+                <label for="tipo">Tipo</label>
+                <select id="tipo">
+                    <option value="receita">Receita</option>
+                    <option value="despesa">Despesa</option>
+                </select>
 
                 <div class="modal-actions">
                     <a href="#" class="ghost">Cancelar</a>
@@ -144,24 +143,23 @@
         </div>
     </div>
 
-    <!-- ================= MODAL EDITAR CLIENTE ================= -->
     <div id="modal-edit1" class="modal">
         <div class="modal-box">
-            <h2>Editar Cliente</h2>
+            <h2>Editar Transação</h2>
             <form>
-                <label for="nome-edit">Nome</label>
-                <input type="text" id="nome-edit" value="Cristiano Ronaldo dos Santos Aveiro">
+                <label for="descricao-edit1">Descrição</label>
+                <input type="text" id="descricao-edit1" value="Mensalidade Cliente: Cristiano Ronaldo">
 
-                <label for="telefone-edit">Telefone</label>
-                <input type="text" id="telefone-edit" value="(11) 98877-2233">
+                <label for="data-edit1">Data</label>
+                <input type="date" id="data-edit1" value="2026-01-25">
 
-                <label for="cpf-edit">CPF</label>
-                <input type="text" id="cpf-edit" value="123.456.789-01">
+                <label for="valor-edit1">Valor</label>
+                <input type="number" id="valor-edit1" value="250.00" step="0.01">
 
-                <label for="status-edit">Status</label>
-                <select id="status-edit">
-                    <option value="ativo" selected>Ativo</option>
-                    <option value="inativo">Inativo</option>
+                <label for="tipo-edit1">Tipo</label>
+                <select id="tipo-edit1">
+                    <option value="receita" selected>Receita</option>
+                    <option value="despesa">Despesa</option>
                 </select>
 
                 <div class="modal-actions">
@@ -174,21 +172,21 @@
 
     <div id="modal-edit2" class="modal">
         <div class="modal-box">
-            <h2>Editar Cliente</h2>
+            <h2>Editar Transação</h2>
             <form>
-                <label for="nome-edit2">Nome</label>
-                <input type="text" id="nome-edit2" value="Esmeraldino Suárez">
+                <label for="descricao-edit2">Descrição</label>
+                <input type="text" id="descricao-edit2" value="Compra de Materiais">
 
-                <label for="telefone-edit2">Telefone</label>
-                <input type="text" id="telefone-edit2" value="(11) 97755-8899">
+                <label for="data-edit2">Data</label>
+                <input type="date" id="data-edit2" value="2026-01-22">
 
-                <label for="cpf-edit2">CPF</label>
-                <input type="text" id="cpf-edit2" value="987.654.321-00">
+                <label for="valor-edit2">Valor</label>
+                <input type="number" id="valor-edit2" value="120.00" step="0.01">
 
-                <label for="status-edit2">Status</label>
-                <select id="status-edit2">
-                    <option value="ativo">Ativo</option>
-                    <option value="inativo" selected>Inativo</option>
+                <label for="tipo-edit2">Tipo</label>
+                <select id="tipo-edit2">
+                    <option value="receita">Receita</option>
+                    <option value="despesa" selected>Despesa</option>
                 </select>
 
                 <div class="modal-actions">
