--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <li><a href="atv4/index.html">Atividade 4</a></li>
             <li><a href="Avaliação 1/index.html">Avaliação 1</a></li>
             <li><a href="Avaliação 2/index.html">Avaliação 2</a></li>
+            <li><a href="Fisio+/index.html">Fisio+</a></li>
         </ul>
     </div>
 
