--- a/Fisio+/configuracoes.html
+++ b/Fisio+/configuracoes.html
@@ -51,8 +51,22 @@
                 <input type="checkbox" id="menu-toggle" class="menu-checkbox">
                 <label for="menu-toggle" class="menu-btn">☰</label>
                 <div class="menu-dropdown">
+                    <div class="mobile-only">
+                        <a href="dashboard.html"><strong>Menu Principal</strong></a>
+                        <a href="atendimento/agendamentos.html">Agenda</a>
+                        <a href="atendimento/avaliaçoes.html">Avaliações</a>
+                        <a href="atendimento/checkin.html">Check-in</a>
+                        <a href="atendimento/prontuarios.html">Prontuários</a>
+                        <a href="cadastro/clientes.html">Clientes</a>
+                        <a href="cadastro/profissionais.html">Profissionais</a>
+                        <a href="financeiro/financeiro.html">Financeiro</a>
+                        <a href="financeiro/mensalidades.html">Mensalidades</a>
+                        <a href="financeiro/relatorios.html">Relatórios</a>
+                        <hr style="border: 0; border-top: 1px solid var(--stroke); margin: 5px 0;">
+                    </div>
+
                     <a href="configuracoes.html">Configurações</a>
-                    <a href="../login.html">Sair</a>
+                    <a href="index.html" style="color: #ef4444;">Sair</a>
                 </div>
             </div>
 
@@ -119,11 +133,11 @@
         const uploadInput = document.getElementById('upload-foto');
         const fotoClinica = document.getElementById('foto-clinica');
 
-        uploadInput.addEventListener('change', function() {
+        uploadInput.addEventListener('change', function () {
             const file = this.files[0];
             if (file) {
                 const reader = new FileReader();
-                reader.onload = function(e) {
+                reader.onload = function (e) {
                     fotoClinica.src = e.target.result;
                 }
                 reader.readAsDataURL(file);
