--- a/Fisio+/financeiro/financeiro.html
+++ b/Fisio+/financeiro/financeiro.html
@@ -50,8 +50,22 @@
                 <input type="checkbox" id="menu-toggle" class="menu-checkbox">
                 <label for="menu-toggle" class="menu-btn">☰</label>
                 <div class="menu-dropdown">
+                    <div class="mobile-only">
+                        <a href="../dashboard.html"><strong>Menu Principal</strong></a>
+                        <a href="../atendimento/agendamentos.html">Agenda</a>
+                        <a href="../atendimento/avaliaçoes.html">Avaliações</a>
+                        <a href="../atendimento/checkin.html">Check-in</a>
+                        <a href="../atendimento/prontuarios.html">Prontuários</a>
+                        <a href="../cadastro/clientes.html">Clientes</a>
+                        <a href="../cadastro/profissionais.html">Profissionais</a>
+                        <a href="financeiro.html">Financeiro</a>
+                        <a href="mensalidades.html">Mensalidades</a>
+                        <a href="relatorios.html">Relatórios</a>
+                        <hr style="border: 0; border-top: 1px solid var(--stroke); margin: 5px 0;">
+                    </div>
+
                     <a href="../configuracoes.html">Configurações</a>
-                    <a href="../index.html">Sair</a>
+                    <a href="../index.html" style="color: #ef4444;">Sair</a>
                 </div>
             </div>
 
@@ -59,6 +73,7 @@
                 <img src="../logofisio.png" alt="Fisio+">
             </div>
         </div>
+
     </header>
 
     <main class="container">
